wordpress-mysql-advanced/mysql/phpmyadmin/pma-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        startupProbe:
          failureThreshold: 30
          periodSeconds: 5
          timeoutSeconds: 10
          httpGet:
            path: /
            port: 80
        livenessProbe:
          failureThreshold: 30
          periodSeconds: 5
          timeoutSeconds: 10
          httpGet:
            path: /
            port: 80
        readinessProbe:
          failureThreshold: 30
          periodSeconds: 5
          timeoutSeconds: 10
          httpGet:
            path: /
            port: 80
