wordpress-mysql-advanced/mysql/phpmyadmin/pma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin
spec:
  ingressClassName: nginx
  rules:
  - host: phpmyadmin.moons.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin
            port:
              number: 80
